--- a/views/mixins/form-helpers.jade
+++ b/views/mixins/form-helpers.jade
@@ -1,3 +1,4 @@
+//- Todo: Use some mixins to more easily build forms
 mixin field(type, name, label, placeholder)
     .field(class='field-' + type)
         label #{label}:
