--- a/views/layout.jade
+++ b/views/layout.jade
@@ -37,9 +37,9 @@ html
         script(type="text/x-handlebars-template" id="singleLinkTemplate").
             <article id="{{id}}" class="link">
                 <section class="link__votes">
-                    <a class="link__vote link__vote--up">Upvote</a>
+                    <a href="#upvote" class="link__vote link__vote--up" data-vote="up">Upvote</a>
                     <span class="link__vote link__vote--count">{{votes}}</span>
-                    <a class="link__vote link__vote--up">Downvote</a>
+                    <a href="downvote" class="link__vote link__vote--up" data-vote="down">Downvote</a>
                 </section>
                 <h2 class="link__title">
                     <a href="{{url}}" target="_blank" class="link__link">{{title}}</a>
